<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.agrinett.agridiagnose.app.NoInternetFragment">

    <ImageView
        android:id="@+id/imgNoWifi"
        android:contentDescription="@string/no_internet_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:minHeight="150dp"
        app:srcCompat="@mipmap/ic_wifi_off" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgNoWifi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/no_conn_header" />

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/no_conn_msg"
        android:layout_below="@+id/txtHeader"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
